syntax = "proto3";

package image_database;

import "google/protobuf/timestamp.proto";
import "proto/attest.proto";

option go_package = "github.com/GoogleCloudPlatform/confidential-space/server/proto/gen/image_database";

message ImageDatabase {
  enum AttributeLabel {
    NIL = 0;
    TEST = 1;  // test images
    USABLE = 2;
    STABLE = 3;
    LATEST = 4;
    EXPERIMENTAL = 5;  // external images that contain experimental features
  }

  // Represents values associated with a Confidential Space Image
  message ImageGoldenEntry {
    // The public facing image release name.
    string image_release_name = 1;
    bool is_hardened = 2;
    uint32 image_base_version = 5;
    uint32 swversion = 6;
    repeated AttributeLabel attribute_labels = 9;
    // Explicitly marks the CS Image as retired. If this field is true,
    // attestation validations for the corresponding CS image should fail.
    bool deprecated = 7;

    reserved 3, 4;
    reserved "grub_digests", "efi_digests";
  }

  enum CCKnownCertificates {
    UNSPECIFIED_CERT = 0;
    CONF_SPACE_SELF_SIGNED_DB_CA = 1;
    COS_DB_V10 = 2;
    COS_DB_V20250203 = 3;
  }

  message CCDatabase {
    repeated CCKnownCertificates known_certificates = 1 [packed = false];

    repeated string digests = 2;
  }

  message ImageBaseEntry {
    CCDatabase db = 1;
    CCDatabase dbx = 2;
    CCDatabase authority = 3;
  }

  // This encodes minimum requirements for general attestations received by the
  // verifier.
  message ServiceBasePolicy {
    google.protobuf.Timestamp earliest_cert_issue_time = 1;
    reserved 2;
    reserved "firmware_policy";
  }

  message ConfidentialSpaceBasePolicy {
    attest.Policy firmware_policy = 1;
  }

  // Map of kernel command line to other image golden values.
  map<string, ImageGoldenEntry> golden_values = 1;

  // Map of image base version to image base values.
  map<uint32, ImageBaseEntry> image_base_values = 2;

  // Attestation Verifier appraisal policy for verifying all attestations.
  // The service will validate this policy before use case specific
  // attestations, like Confidential Space.
  ServiceBasePolicy service_base_policy = 5;

  // Attestation Verifier appraisal policy for verifying Confidential Space
  // attestations.
  ConfidentialSpaceBasePolicy cs_base_policy = 6;

  reserved 3, 4;
  reserved "firmware_policy", "earliest_cert_issue_time";
}
